# app/validators/user/username_availability.ts
@@ -1,0 +1,6 @@
+import { username } from '#validators/shared/fields/username'
+import vine from '@vinejs/vine'
+
+export const usernameAvailabilityValidator = vine.create({
+  username: username(),
+})
