# start/routes.ts
@@ -66,6 +66,9 @@ router
   .group(() => {
     router.post('accounts', [controllers.user.Account, 'store'])
     router
+      .get('accounts/username-availability', [controllers.user.UsernameAvailability, 'show'])
+      .use(middleware.usernameAvailabilityRateLimit())
+    router
       .post('media-assets', [controllers.mediaAsset.MediaAssets, 'store'])
       .use(middleware.auth())
 
